--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Outfit:wght@400;700&family=Poppins:wght@300;700&family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/style.css">
     
     <title>FRONTEND MENTOR QR code</title>
 </head>
@@ -13,15 +16,12 @@
     <div class="card">
     <div class="QR-code">
       <img src="/images/image-qr-code.png">
-      <h3>  Improve your frontend<br>skill by building projects</h3>
-      <p>Scan the QR code to visit Frontend<br> and take your coding skills to <br> the next level</p>
+      <h3>  Improve your front-end<br>skill by building projects</h3>
+      <p>Scan the QR code to visit Front-end<br> and take your coding skills to <br> the next level</p>
     </div>
 
     
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Lebari</a>.
-    </div>
+   
     </div>
 
   </section>
